--- a/src/Api/AdvertBundle/Resources/views/Default/index.html.twig
+++ b/src/Api/AdvertBundle/Resources/views/Default/index.html.twig
@@ -35,7 +35,7 @@
                         <h2>Tri par categories</h2>
                         <ul>
                             {% for category in categories %}
-                                <li><a href="{{ path('advert_category', {'category': category.id}) }}">{{ category.name }}</a></li>
+                                <li><a href="{{ path('advert_category', {'category': category.slugCat}) }}">{{ category.name }}</a></li>
                             {% endfor %}
                         </ul>
                     </div>
@@ -43,7 +43,7 @@
                         <h2>Tri par villes</h2>
                         <ul>
                             {% for city in cities %}
-                                <li><a href="{{ path('advert_city', {'city': city.id}) }}">{{ city.name }}</a></li>
+                                <li><a href="{{ path('advert_city', {'city': city.name}) }}">{{ city.name }}</a></li>
                             {% endfor %}
                         </ul>
                     </div>
